# personal-finance

./: .claude.md  .gitignore  LICENSE  NOTES.md  README.md  app.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
data/: category_rules.csv
data/processed/: all_transactions_categorized.csv  all_transactions_clean.csv  anz_categorized.csv  anz_clean.csv  bankwest_clean.csv
data/processed/synthetic/: all_transactions_categorized.csv  all_transactions_clean.csv  anz_clean.csv  bank_a_clean.csv  bank_b_clean.csv  bankwest_clean.csv
data/raw/anz/: ANZ.csv
data/raw/bankwest/: Transactions_07_01_2026.csv
data/raw/synthetic/: ANZ.csv  Bank_A.csv  Bank_B.csv  bankwest.csv
scripts/: 01_load_anz.py  01_load_bank_a.py  02_load_bank_b.py  02_load_bankwest.py  03_categorize_anz.py  03_combine.py  04_categorize.py  05_load_to_db.py  06_analyze.py  generate_synthetic_data.py  run_pipeline.py
