[project]
name = "personal-finance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "playwright>=1.57.0",
    "playwright-mcp>=0.1.0",
    "plotly>=6.5.1",
    "streamlit>=1.52.2",
]
